--- a/styless.css
+++ b/styless.css
@@ -21,8 +21,20 @@ header {
      transition: background-color 0.3 ease;
 }
 
-header h1 {
+.header-container {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+    
+}
+.header-container .logo {
+     height: 50px;
+     margin-right: 15px;
+}
+
+.header-container h1 {
      margin: 0;
+     font-size: 1.5em;
 
 }
 
@@ -207,7 +219,7 @@ section h2 {
 }
 
 .testimonial p {
-     display: flex;
+     display: center;
      font-style: italic;
      text-align: center;
 }
@@ -226,7 +238,7 @@ section h2 {
      box-shadow: 0 0 10px rgba(0, 0, 0, 0, 1);
      transition: transform 0.2s;
      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-     text-align: left;
+     text-align: ce;
 }
 
 .news-card:hover {
@@ -247,10 +259,16 @@ section h2 {
      transition: color 0.3s ease;
 }
 
-.video-cantainer {
+#video {
      text-align: center;
-     margin: 20px auto;
-     flex-direction: column;
+    padding: 50px 0;
+}
+
+#video video {
+     max-width: 100%;
+     height: auto;
+     border: 2px solid #ddd;
+     border-radius: 10px;
 }
 
 #contact-form {
@@ -443,4 +461,53 @@ footer {
 
 #news-container {
      display: flex;
+}
+
+#reviews {
+     padding: 50px 0;
+     text-align: center;
+}
+
+.reviews-form {
+     margin-bottom: 30px;
+}
+
+.reviews-form h3 {
+     margin-bottom: 15px;
+}
+
+.reviews-form label {
+     display: block;
+     margin: 10px 0 5px;
+}
+
+.reviews-form input,
+.reviews-form select,
+.reviews-form textarea {
+     width: 100%;
+   padding: 10px;
+   margin-bottom: 10px;
+   border: 1px solid #ddd;
+   border-radius: 5px;
+}
+
+.reviews-form button:hover {
+     background-color: #45a049;
+}
+
+.review-list h3 {
+     margin-bottom: 15px;
+}
+
+.review-list ul {
+     list-style-type: none;
+     padding: 0;
+}
+
+.review-list ul li {
+     border: 1px solid #ddd;
+     border-radius: 5px;
+     padding: 10px;
+     margin-bottom: 10px;
+     text-align: left;
 }
